# plastic

./: .gitignore  README.md  pyproject.toml  setup.py
dev/: Testing demo - Python 3.ipynb  sqlite-test.db
plastic/: column.py  connection.py  core.py  meta.py  metaplastic.py  plastic.py  record.py  recordset.py  tools.py
plastic/connectors/: base.py  ignition.py  mysql.py  sqlite.py
plastic/metaqueries/: base.py  mysql.py  postgres.py  sqlite.py
test/plastic/connectors/: mysql.base.sql  sqlite.base.sql
